<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000000"
    tools:context=".LevelActivity" >

    <Button
        android:id="@+id/Lev1Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Lev2Button"
        android:layout_alignBottom="@+id/Lev2Button"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:padding="5dp"
        android:background="@drawable/btn_ok_selector"
        android:enabled="false"
        android:text="@string/Lev1" />

    <Button
        android:id="@+id/Lev2Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:background="@drawable/btn_ok_selector"
        android:layout_marginTop="16dp"
        android:padding="5dp"
        android:layout_toRightOf="@+id/Lev1Button"
        android:enabled="false"
        android:text="@string/Lev2" />

    <Button
        android:id="@+id/Lev3Button"
        android:layout_width="wrap_content"
        android:background="@drawable/btn_ok_selector"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Lev2Button"
        android:layout_alignBottom="@+id/Lev2Button"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/Lev2Button"
        android:enabled="false"
        android:padding="5dp"
        android:text="@string/Lev3" />

    <Button
        android:id="@+id/Lev4Button"
        android:layout_width="wrap_content"
        android:background="@drawable/btn_ok_selector"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Lev3Button"
        android:layout_alignBottom="@+id/Lev3Button"
        android:layout_marginLeft="16dp"
        android:padding="5dp"
        android:layout_toRightOf="@+id/Lev3Button"
        android:enabled="false"
        android:text="@string/Lev4" />

    <Button
        android:id="@+id/Lev5Button"
        android:layout_width="wrap_content"
        android:background="@drawable/btn_ok_selector"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Lev4Button"
        android:layout_alignBottom="@+id/Lev4Button"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/Lev4Button"
        android:enabled="false"
        android:padding="5dp"
        android:text="@string/Lev5" />

</RelativeLayout>